# pytest-yuk

./: README.md  pyproject.toml  pytest_yuk.py  test_yuk.py  tox.ini
tests/: test_yuk.py
