[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = "pytest-yuk"
module = "pytest_yuk"
author = "Brian Okken"
author-email = "brian+pypi@pythontest.com"
home-page = "https://github.com/okken/pytest-yuk"
requires = ["pytest>=5.0.0"]
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"

[tool.flit.entrypoints."pytest11"]
srcpaths = "pytest_yuk"
